Fix clipped symbols on theme menu items, fix vertical alignment

--- a/app-next/components/themes/theme-menu/components/theme-menu-item.module.sass
+++ b/app-next/components/themes/theme-menu/components/theme-menu-item.module.sass
@@ -13,6 +13,8 @@
 
 		.symbol
 			@include size($itemSize)
+			overflow: visible
+			transform: translateY(-1px)
 
 		.text
 			margin-left: 0.75rem
